src/test/ui/parser/removed-syntax-ptr-lifetime.stderr
error: expected one of `!`, `(`, `::`, `;`, or `<`, found `/`
  --> $DIR/removed-syntax-ptr-lifetime.rs:1:22
   |
LL | type bptr = &lifetime/isize;
   |                      ^ expected one of `!`, `(`, `::`, `;`, or `<`

error: aborting due to previous error

